done add slide from admin

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17802,8 +17802,6 @@ video {
 .subscribe-line .form-control {
     height: auto;
     font-size: 1.825em;
-    border-bottom: 1px solid #fff;
-    border-radius: 0 !important;
     padding: 0;
     font-weight: 300;
     line-height: 54px;
@@ -17811,9 +17809,7 @@ video {
 }
 
 .subscribe-line .form-control:focus {
-    border-top: none;
-    border-left: none;
-    border-right: none;
+    border: none;
 }
 
 .subscribe-line .btn:not(.btn-lg) {
